--- a/stake.html
+++ b/stake.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>More Practice</title>
+    <title>Stake</title>
     <script src="https://kit.fontawesome.com/126ab056cd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stake.css">
     <script src="stake.js" defer></script>
@@ -12,8 +12,8 @@
     <div class="stake-demo">
         <div class="fixed-left">
             <div class="fl-head">
-                <span>Casino</span>
-                <span>Sports</span>
+                <span><img src="Gallery\gallery1\casino.svg" alt="Sorry">Casino</span>
+                <span><img src="Gallery\gallery1\sports.svg" alt="Sorry">Sports</span>
             </div>
             <div class="fl-body">
                 <div class="fl-casino">
@@ -22,14 +22,14 @@
                         <i class="fa-solid fa-chevron-left"></i>
                     </div>
                     <div class="fl-dropdown">
-                        <div class="fl-dd-element"><span>Favourite</span></div>
-                        <div class="fl-dd-element"><span>Recent</span></div>
-                        <div class="fl-dd-element"><span>Challenges</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\favourites.svg" alt="Sorry">Favourite</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\recent.svg" alt="Sorry">Recent</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\challenges.svg" alt="Sorry">Challenges</span></div>
                         <div class="fl-seperator"></div>
-                        <div class="fl-dd-element"><span>Stake Originals</span></div>
-                        <div class="fl-dd-element"><span>Stake Exclusive</span></div>
-                        <div class="fl-dd-element"><span>Slots</span></div>
-                        <div class="fl-dd-element"><span>Game Shows</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\stake-originals.svg" alt="Sorry">Stake Originals</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\stake-exclusives.svg" alt="Sorry">Stake Exclusive</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\slots.svg" alt="Sorry">Slots</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\gifts.svg" alt="Sorry">Game Shows</span></div>
                         <div class="fl-seperator"></div>
                     </div>
                 </div>
@@ -40,21 +40,23 @@
                         <i class="fa-solid fa-chevron-left"></i>
                     </div>
                     <div class="fl-dropdown">
-                        <div class="fl-dd-element"><span>My Bets</span></div>
-                        <div class="fl-dd-element fl-dropdown-active"><span>Live Events</span></div>
-                        <div class="fl-dd-element"><span>Starting Soon</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\my-bets.svg" alt="Sorry">My Bets</span></div>
+                        <div class="fl-dd-element fl-dropdown-active"><span><img src="Gallery\gallery1\live-events.svg" alt="Sorry">Live Events</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\starting-soon.svg" alt="Sorry">Starting Soon</span></div>
                         <div class="fl-seperator"></div>
+
                         <div class="fl-dd-header"><span>Popular</span></div>
-                        <div class="fl-dd-element"><span>NBA</span></div>
-                        <div class="fl-dd-element"><span>World Tennis League</span></div>
-                        <div class="fl-dd-element"><span>EFL Cup</span></div>
-                        <div class="fl-dd-element"><span>Big Bash Cup</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\basketball.svg" alt="Sorry">NBL</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\Tennis.svg" alt="Sorry">World Tennis League</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\soccer.svg" alt="Sorry">EFL Cup</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\cricket.svg" alt="Sorry">Big Bash League</span></div>
                         <div class="fl-seperator"></div>
+
                         <div class="fl-dd-header"><span>Top Sports</span></div>
-                        <div class="fl-dd-element"><span>Soccer</span></div>
-                        <div class="fl-dd-element"><span>Tennis</span></div>
-                        <div class="fl-dd-element"><span>Basketball</span></div>
-                        <div class="fl-dd-element"><span>Ice Hockey</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\soccer.svg" alt="Sorry">Soccer</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\Tennis.svg" alt="Sorry">Tennis</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\basketball.svg" alt="Sorry">Basketball</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\ice-hockey.svg" alt="Sorry">Ice Hockey</span></div>
                         <div class="fl-seperator"></div>
                     </div>
                 </div>
@@ -65,14 +67,20 @@
                         <i class="fa-solid fa-chevron-left"></i>
                     </div>
                     <div class="fl-dropdown">
-                        <div class="fl-dd-element"><span>$50k Weekly Raffle</span></div>
-                        <div class="fl-dd-element"><span>$100k Race - 24 Hours</span></div>
-                        <div class="fl-dd-element"><span>View All</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\weekly-raffle.svg" alt="Sorry">$50k Weekly Raffle</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\race.svg" alt="Sorry">$100k Race - 24 Hours</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\gifts.svg" alt="Sorry">View All</span></div>
                         <div class="fl-seperator"></div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="odds-page">
+            <div class="fixed-top">
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
