--- a/stake.html
+++ b/stake.html
@@ -46,17 +46,17 @@
                         <div class="fl-seperator"></div>
 
                         <div class="fl-dd-header"><span>Popular</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\basketball.svg" alt="Sorry">NBL</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\Tennis.svg" alt="Sorry">World Tennis League</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\soccer.svg" alt="Sorry">EFL Cup</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\cricket.svg" alt="Sorry">Big Bash League</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\basketball.svg" alt="Sorry">NBL</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\Tennis.svg" alt="Sorry">World Tennis League</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\soccer.svg" alt="Sorry">EFL Cup</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\cricket.svg" alt="Sorry">Big Bash League</span></div>
                         <div class="fl-seperator"></div>
 
                         <div class="fl-dd-header"><span>Top Sports</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\soccer.svg" alt="Sorry">Soccer</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\Tennis.svg" alt="Sorry">Tennis</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\basketball.svg" alt="Sorry">Basketball</span></div>
-                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\ice-hockey.svg" alt="Sorry">Ice Hockey</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\soccer.svg" alt="Sorry">Soccer</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\Tennis.svg" alt="Sorry">Tennis</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\basketball.svg" alt="Sorry">Basketball</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery1\ice-hockey.svg" alt="Sorry">Ice Hockey</span></div>
                         <div class="fl-seperator"></div>
                     </div>
                 </div>
@@ -71,6 +71,40 @@
                         <div class="fl-dd-element"><span><img src="Gallery\gallery2\race.svg" alt="Sorry">$100k Race - 24 Hours</span></div>
                         <div class="fl-dd-element"><span><img src="Gallery\gallery1\gifts.svg" alt="Sorry">View All</span></div>
                         <div class="fl-seperator"></div>
+                    </div>
+                </div>
+
+                <div class="fl-sponsorships fl-margin">
+                    <div class="fl-main sponsorships-main">
+                        <span>Sponsorships</span>
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </div>
+                    <div class="fl-dropdown">
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\drake.svg" alt="">Drake</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\everton.svg" alt="">Everton Football Club</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\watford.svg" alt="">Watford Football Club</span></div>
+                        <div class="fl-dd-element"><span><img src="Gallery\gallery2\kun-aguero.svg" alt="">Kun Aguero</span></div>
+                        <div class="fl-seperator"></div>
+                    </div>
+                </div>
+
+                <div class="fl-extra fl-blog"><div class="text">Blog</div></div>
+                <div class="fl-extra"><div class="text">Live Support</div></div>
+
+                <div class="fl-select-lang">
+                    <div class="select fl-extra">
+                        <div class="select-text text"><span><img src="Gallery\gallery2\USA.svg" alt="">English</span></div>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="select-dropdown">
+                        <div class="lang-options"><span><img src="Gallery\gallery2\de.svg" alt="">Deutsch</span></div>
+                        <div class="lang-options active-lang"><span><img src="Gallery\gallery2\USA.svg" alt="">English</span></div>
+                        <div class="lang-options"><span><img src="Gallery\gallery2\es.svg" alt="">Espanol</span></div>
+                        <div class="lang-options"><span><img src="Gallery\gallery2\fr.svg" alt="">Francais</span></div>
+                        <div class="lang-options"><span><img src="Gallery\gallery2\id.svg" alt="">Indonesian</span></div>
+                        <div class="lang-options"><span><img src="Gallery\gallery2\pl.svg" alt="">Polski</span></div>
+                        <div class="lang-options"><span><img src="Gallery\gallery2\tr.svg" alt="">Turkce</span></div>
+                        <div class="lang-options"><span><img src="Gallery\gallery2\br.svg" alt="">Portugues</span></div>
                     </div>
                 </div>
             </div>
