Odds Page Fixed Head (DD1B)

--- a/stake.html
+++ b/stake.html
@@ -122,7 +122,7 @@
                     <div class="stake-wallet align-center">
                         <div class="wallet-options">
                             <div class="ft-current-wallet display-flex-even">
-                                <div class="select-text text"><span class="display-flex-center"><span>$0.00</span><img src="Gallery\crypto-gallery\btc.svg" alt=""></span></div>
+                                <div class="select-text display-flex-center"><span>$0.00</span><img src="Gallery\crypto-gallery\btc.svg" id="current-image"></div>
                                 <i class="fa-solid fa-chevron-down"></i>
                             </div>
                             <div class="wallet-dropdown">
@@ -133,18 +133,18 @@
                                      </div>
                                  </div>
                                  <div class="wallet-dropdown-options">
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\btc.svg" alt="">BTC</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\eth.svg" alt="">ETH</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\doge.svg" alt="">DOGE</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\bnb.svg" alt="">BNB</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\usdc.svg" alt="">USDC</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\trx.svg" alt="">TRX</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\uni.svg" alt="">UNI</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\usdt.svg" alt="">USDT</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\matic.svg" alt="">MATIC</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\ltc.svg" alt="">LTC</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\shiba.svg" alt="">SHIBA</span></div>
-                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\jyp.svg" alt="">JYP</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\btc.svg" id="selected-image">BTC</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\eth.svg" id="selected-image">ETH</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\doge.svg" id="selected-image">DOGE</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\bnb.svg" id="selected-image">BNB</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$110.00</span> <span><img src="Gallery\crypto-gallery\usdc.svg" id="selected-image">USDC</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\trx.svg" id="selected-image">TRX</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\uni.svg" id="selected-image">UNI</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\usdt.svg" id="selected-image">USDT</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\matic.svg" id="selected-image">MATIC</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\ltc.svg" id="selected-image">LTC</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\shiba.svg" id="selected-image">SHIBA</span></div>
+                                    <div class="w-option"><span id="crypto-balance">$0.00</span> <span><img src="Gallery\crypto-gallery\jyp.svg" id="selected-image">JYP</span></div>
                                  </div>
                                  <div class="wallet-settings display-flex-center"><img src="Gallery\gallery2\wallet-s.svg" alt="">Wallet Settings</div>
                             </div>
