--- a/stake.html
+++ b/stake.html
@@ -166,6 +166,12 @@
                 </div>
             </div>
         </div>
+
+        <div class="betting-section">
+            <div class="bs-container">
+                
+            </div>
+        </div>
     </div>
 
 
