Odds Type Section

--- a/stake.html
+++ b/stake.html
@@ -185,12 +185,32 @@
                             <div class="bs-menu-as menu2-option display-flex-center">All Soccer</div>
                         </div>
                         <div class="menu2-right">
-                            <div class="three-way display-flex-center">
-                                <div class="menu2-image">
-                                    <img src="Gallery\gallery2\three-way.svg" alt="">
-                                    <div class="menu2-popup"><span>Three Way</span></div>
+                            <div class="three-way">
+                                <div class="display-flex-center">
+                                    <div class="menu2-image">
+                                        <img src="Gallery\gallery2\three-way.svg" alt="">
+                                        <div class="menu2-popup"><span>Three Way</span></div>
+                                    </div>
+                                    <div class="odds-display-type">
+                                        <div class="bs-menu-total menu-all display-flex-even cursor"><span>Total</span><i class="fa-solid fa-chevron-down"></i></div>
+                                        <div class="bs-menu-handicap menu-all display-flex-even cursor"><span>Handicap</span><i class="fa-solid fa-chevron-down"></i></div>
+                                        <div class="bs-menu-winner menu-all display-flex-even cursor"><span>Winner</span><i class="fa-solid fa-chevron-down"></i></div>
+                                        <div class="odds-dropdown">
+                                            <div class="od-option od-total align-center">Total</div>
+                                            <div class="od-option od-handicap align-center">Handicap</div>
+                                            <div class="od-option od-option-active od-winner align-center">Winner</div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="bs-menu-winner display-flex-even cursor">Winner<i class="fa-solid fa-chevron-down"></i></div>
+                            </div>
+                            <div class="standard">
+                                <div class="display-flex-center">
+                                    <div class="menu2-image">
+                                        <img src="Gallery\gallery2\standard.svg" alt="">
+                                        <div class="menu2-popup popup-standard"><span>Standard</span></div>
+                                    </div>
+                                    <div class="bs-menu-main display-flex-even">Main<i class="fa-solid fa-chevron-down"></i></div>
+                                </div>
                             </div>
                         </div>
                     </div>
