--- a/stake.html
+++ b/stake.html
@@ -122,7 +122,7 @@
                     <div class="stake-wallet align-center">
                         <div class="wallet-options">
                             <div class="ft-current-wallet display-flex-even">
-                                <div class="current-text display-flex-center"><span class="current-v">$0.00</span><img src="Gallery\crypto-gallery\btc.svg" id="current-image"></div>
+                                <div class="current-text display-flex-center"><span class="current-value"></span><img src="Gallery\crypto-gallery\btc.svg" id="current-image"></div>
                                 <i class="fa-solid fa-chevron-down"></i>
                             </div>
                             <div class="wallet-dropdown">
@@ -133,18 +133,18 @@
                                      </div>
                                  </div>
                                  <div class="wallet-dropdown-options">
-                                    <div class="w-option"><span class="">$220.00</span> <span><img src="Gallery\crypto-gallery\btc.svg" id="selected-image">BTC</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\eth.svg" id="selected-image">ETH</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\doge.svg" id="selected-image">DOGE</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\bnb.svg" id="selected-image">BNB</span></div>
-                                    <div class="w-option"><span class="active-crypto">$110.00</span> <span><img src="Gallery\crypto-gallery\usdc.svg" id="selected-image">USDC</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\trx.svg" id="selected-image">TRX</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\uni.svg" id="selected-image">UNI</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\usdt.svg" id="selected-image">USDT</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\matic.svg" id="selected-image">MATIC</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\ltc.svg" id="selected-image">LTC</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\shiba.svg" id="selected-image">SHIBA</span></div>
-                                    <div class="w-option"><span class="">$0.00</span> <span><img src="Gallery\crypto-gallery\jyp.svg" id="selected-image">JYP</span></div>
+                                    <div class="w-option cv"><span>$220.00</span> <span><img src="Gallery\crypto-gallery\btc.svg" id="selected-image">BTC</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\eth.svg" id="selected-image">ETH</span></div>
+                                    <div class="w-option"><span>$10.00</span> <span><img src="Gallery\crypto-gallery\doge.svg" id="selected-image">DOGE</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\bnb.svg" id="selected-image">BNB</span></div>
+                                    <div class="w-option"><span>$110.00</span> <span><img src="Gallery\crypto-gallery\usdc.svg" id="selected-image">USDC</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\trx.svg" id="selected-image">TRX</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\uni.svg" id="selected-image">UNI</span></div>
+                                    <div class="w-option"><span>$67.00</span> <span><img src="Gallery\crypto-gallery\usdt.svg" id="selected-image">USDT</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\matic.svg" id="selected-image">MATIC</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\ltc.svg" id="selected-image">LTC</span></div>
+                                    <div class="w-option"><span>$30.00</span> <span><img src="Gallery\crypto-gallery\shiba.svg" id="selected-image">SHIBA</span></div>
+                                    <div class="w-option"><span>$0.00</span> <span><img src="Gallery\crypto-gallery\jyp.svg" id="selected-image">JYP</span></div>
                                  </div>
                                  <div class="wallet-settings display-flex-center"><img src="Gallery\gallery2\wallet-s.svg" alt="">Wallet Settings</div>
                             </div>
@@ -175,7 +175,6 @@
                         <div class="tm-display">
                             <div class="tm-option tm-soccer display-flex-center cursor">Soccer</div>
                             <div class="tm-option tm-england display-flex-center">England</div>
-                            <div class="tm-line"></div>
                         </div>
                     </div>
                     <div class="bs-menu2 display-flex-btw">
