--- a/stake.html
+++ b/stake.html
@@ -111,6 +111,87 @@
         </div>
     </div>
 
+    <div class="small-side-bar">
+        <div class="ssb-head display-flex-center">
+            <div class="ssb-hover ssb-head-image"><img src="Gallery\gallery1\alter-sidebar.svg" alt=""></div>
+            <div class="ssb-head-tooltip display-flex-center">Expand Sidebar</div>
+        </div>
+        <div class="ssb-body">
+            <div class="ssb-center">
+                <div class="ssb-part">
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\casino.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-1 display-flex-center">Casino</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\sports.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-2 display-flex-center">Sports</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\gifts.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-3 display-flex-center">Promotions</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\sponsorships.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-4 display-flex-center">Sponsorships</div>
+                    </div>
+                    <div class="ssb-line"></div>
+                </div>
+                
+                <div class="ssb-part">
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\my-bets.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-5 display-flex-center">My Bets</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\live-events.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-6 display-flex-center">Live Events</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\starting-soon.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-7 display-flex-center">Starting Soon</div>
+                    </div>
+                    <div class="ssb-line"></div>
+                </div>
+
+                <div class="ssb-part">
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\soccer.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-8 display-flex-center">Premier League</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\soccer.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-9 display-flex-center">La Liga</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\Tennis.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-10 display-flex-center">United Cup</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\basketball.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-11 display-flex-center">NBA</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\Tennis.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-12 display-flex-center">WTA Auckland, New Zealand Women Singles</div>
+                    </div>
+                    <div class="ssb-line"></div>
+                </div>
+
+                <div class="ssb-part">
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\american-football.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-13 display-flex-center">American Football</div>
+                    </div>
+                    <div class="ssb-items">
+                        <div class="ssb-hover"><img src="Gallery\gallery1\ice-hockey.svg" alt=""></div>
+                        <div class="ssb-tooltip ssm-14 display-flex-center">Ice Hockey</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="odds-page">
         <div class="fixed-top display-flex-center">
             <div class="center-ft display-flex-btw">
