Responsive Sidebar, [Added Paddings]

--- a/stake.html
+++ b/stake.html
@@ -14,6 +14,10 @@
             <div class="fl-head">
                 <span><img src="Gallery\gallery1\casino.svg" alt="Sorry">Casino</span>
                 <span><img src="Gallery\gallery1\sports.svg" alt="Sorry">Sports</span>
+                <div class="fl-image-container">
+                    <div class="fl-head-image"><img src="Gallery\gallery1\alter-sidebar.svg" alt=""></div>
+                    <div class="fl-head-tooltip display-flex-center">Minimize Sidebar</div>
+                </div>
             </div>
             <div class="fl-body">
                 <div class="fl-casino">
@@ -111,7 +115,7 @@
         </div>
     </div>
 
-    <div class="small-side-bar">
+    <div class="small-side-bar expand">
         <div class="ssb-head display-flex-center">
             <div class="ssb-hover ssb-head-image"><img src="Gallery\gallery1\alter-sidebar.svg" alt=""></div>
             <div class="ssb-head-tooltip display-flex-center">Expand Sidebar</div>
@@ -272,9 +276,7 @@
                                         <div class="menu2-popup"><span>Three Way</span></div>
                                     </div>
                                     <div class="odds-display-type">
-                                        <div class="bs-menu-total menu-all display-flex-even cursor"><span>Total</span><i class="fa-solid fa-chevron-down"></i></div>
-                                        <div class="bs-menu-handicap menu-all display-flex-even cursor"><span>Handicap</span><i class="fa-solid fa-chevron-down"></i></div>
-                                        <div class="bs-menu-winner menu-all display-flex-even cursor"><span>Winner</span><i class="fa-solid fa-chevron-down"></i></div>
+                                        <div class="bs-menu-odt menu-all display-flex-even cursor"><span>Winner</span><i class="fa-solid fa-chevron-down"></i></div>
                                         <div class="odds-dropdown">
                                             <div class="od-option od-total align-center">Total</div>
                                             <div class="od-option od-handicap align-center">Handicap</div>
