Bet Slip (Entry 1)

--- a/stake.html
+++ b/stake.html
@@ -1010,7 +1010,61 @@
         </div>
     </div>
 
+    <div class="cashier">
+        <div class="bl-top display-flex-btw">
+            <div class="bet-menu display-flex-btw">
+                <img src="Gallery\gallery1\my-bets.svg" alt="">
+                <span>Bet Slip</span>
+                <div class="bet-count">2</div>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+            <div class="blt-dropdown">
+                <div class="dd-betslip blt-dd-active dd-item align-center">
+                    <img src="Gallery\gallery2\active-betslip.svg" alt="">
+                    <span>Bet Slip</span>
+                    <div class="bet-count">2</div>
+                </div>
+                <div class="dd-mybets dd-item align-center">
+                    <img src="Gallery\gallery2\norm-mybet.svg" alt="">
+                    <span>My Bets</span>
+                </div>
+            </div>
+            <div class="collapse-bl display-flex-center"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
+        </div>
 
-    <!--<div class="saas">kfgnkbskjc</div>-->
+        <div class="bet-type-container align-center">
+            <div class="bet-type align-center">
+                <div class="bt-item bt-active">
+                    <div class="bt-center align-center">
+                        <img src="Gallery\gallery1\single.svg" alt="">
+                        <span>Single</span>
+                    </div>
+                </div>
+                <div class="bt-item">
+                    <div class="bt-center align-center">
+                        <img src="Gallery\gallery1\multi.svg" alt="">
+                        <span>Multi</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="bet-slip-content">
+            <div class="alter-bl display-flex-btw">
+                <div class="odd-changes">
+                    <div class="oc-text">
+                        <span>Accept Any Odds</span>
+                        <i class="fa-solid fa-chevron-down"></i>
+                    </div>
+                    <div class="oc-dropdown">
+                        <div class="oc-option oc-active">Accept Any Odds</div>
+                        <div class="oc-option">Accept Only Higher Odds</div>
+                        <div class="oc-option">No Odds Changes Accepted</div>
+                    </div>
+                </div>
+                <div class="clear-bl cursor">Clear All</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
