Bet Slip (Entry 3)

--- a/stake.html
+++ b/stake.html
@@ -207,7 +207,7 @@
                     <div class="stake-wallet align-center">
                         <div class="wallet-options">
                             <div class="ft-current-wallet display-flex-even">
-                                <div class="current-text display-flex-center"><span class="current-value"></span><img src="Gallery\crypto-gallery\btc.svg" id="current-image"></div>
+                                <div class="current-text display-flex-center"><span class="current-value"></span><img src="" id="current-image"></div>
                                 <i class="fa-solid fa-chevron-down"></i>
                             </div>
                             <div class="wallet-dropdown">
@@ -1076,6 +1076,37 @@
                     <div class="empty-bs">Bet Slip is Empty</div>
                     <div>Start Beting Now!</div>
                 </div>
+
+                <div class="match-cards-container">
+                    <div class="match-card">
+                        <div class="match-header display-flex-center">
+                            <div class="mh-wrapper display-flex-btw">
+                                <div class="mh-title cursor">Manchester City FC - Chelsea FC</div>
+                                <div class="mh-cancel cursor"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
+                            </div>
+                        </div>
+
+                        <div class="mc-content">
+                            <div class="mc-type">1x2</div>
+                            <div class="mcc-info display-flex-btw">
+                                <div class="mcc-side1">
+                                    <div class="match-pick">Manchester City FC</div>
+                                    <div class="stake-amount">
+                                        <input type="number">
+                                        <img src="Gallery\crypto-gallery\us-dollar.svg" alt="">
+                                    </div>
+                                </div>
+                                <div class="mcc-side2">
+                                    <div class="mp-odd">1.65</div>
+                                    <div class="singles-payout">
+                                        <span class="sp-est">Est. Payout</span>
+                                        <div class="s-dollars align-center"><span>$0.00</span> <img src="Gallery\crypto-gallery\btc.svg" alt=""></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -1085,14 +1116,14 @@
                     <span>Total Stake</span>
                     <div class="ts-amount align-center">
                         <span>$0.00</span>
-                        <img src="Gallery\crypto-gallery\btc.svg" alt="">
+                        <img src="" id="checkout-img" alt="">
                     </div>
                 </div>
                 <div class="est-payout display-flex-btw">
                     <span>Est. Payout</span>
                     <div class="est-amount align-center">
                         <span>$0.00</span>
-                        <img src="Gallery\crypto-gallery\btc.svg" alt="">
+                        <img src="Gallery\crypto-gallery\btc.svg" id="checkout-img" alt="">
                     </div>
                 </div>
                 <button class="place-bet">Place Single Bet</button>
