Bet Slip (Entry 4)

--- a/stake.html
+++ b/stake.html
@@ -421,7 +421,7 @@
                                             </div>
                                             <div class="md-image"><img src="Gallery\gallery2\live-stats.svg" alt=""></div>
                                             <div class="winner-home wd-odd match-odd odds-hover">
-                                                <div class="wd-name">Leicester City FC</div>
+                                                <div class="wd-name">Manchester United FC</div>
                                                 <div class="odd-value">1.25</div>
                                             </div>
                                             <div class="winner-draw wd-odd match-odd odds-hover">
@@ -1016,16 +1016,17 @@
                 <img src="Gallery\gallery1\my-bets.svg" id="cbm-img" alt="">
                 <div class="current-bm align-center">
                     <span>Bet Slip</span>
-                    <div class="bet-count">2</div>
+                    <div class="bet-count"></div>
                 </div>
                 <i class="fa-solid fa-chevron-down"></i>
             </div>
+
             <div class="blt-dropdown">
                 <div class="dd-betslip blt-dd-active dd-item align-center">
                     <img src="Gallery\gallery2\active-betslip.svg" id="bsm-img" alt="">
                     <div class="dd-context align-center">
                         <span>Bet Slip</span>
-                        <div class="bet-count">2</div>
+                        <div class="bet-count"></div>
                     </div>
                 </div>
                 <div class="dd-mybets dd-item align-center">
@@ -1035,6 +1036,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="collapse-bl display-flex-center"><img src="Gallery\gallery2\collapse-bl.svg" alt=""></div>
         </div>
 
